Perkin-UAT/force-app/main/default/objects/ServiceContract/ServiceContract.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>