Perkin-UAT/force-app/main/default/objects/ServiceContract/fields/Clone_From_ID__c.field-meta.xml
<CustomField>
    <fullName>Clone_From_ID__c</fullName>
    <description>A hidden field to be used with Clone with Line Items button.</description>
    <label>Clone From ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>