Perkin-UAT/force-app/main/default/objects/ServiceContract/fields/Clone_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Clone_Line_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A hidden field to be used with Clone with Line Items button.</description>
    <label>Clone Line Items</label>
    <type>Checkbox</type>
</CustomField>