Perkin-UAT/force-app/main/default/objects/ServiceContract/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Date contract PO expected - used by LST Service contract sales</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>