Perkin-UAT/force-app/main/default/objects/ServiceContract/fields/Contact_Mailling_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailling_Address__c</fullName>
    <formula>Contact.MailingStreet</formula>
    <label>Contact Mailling Address</label>
    <type>Text</type>
</CustomField>