Perkin-UAT/force-app/main/default/objects/ServiceContract/fields/Contract_Stage__c.field-meta.xml
<CustomField>
    <fullName>Contract_Stage__c</fullName>
    <description>LST Service Contract sales process</description>
    <inlineHelpText>&gt; Stage 5  = Rev Fcst</inlineHelpText>
    <label>Contract Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1 - Qualification</fullName>
            </value>
            <value>
                <fullName>Stage 2 - Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Stage 3 - Solution Differentiation</fullName>
            </value>
            <value>
                <fullName>Stage 4 - Objection Handling</fullName>
            </value>
            <value>
                <fullName>Stage 5 - Preferred</fullName>
            </value>
            <value>
                <fullName>Stage 6 - Negotiating/Forecast</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>