Perkin-UAT/force-app/main/default/objects/ServiceContract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>LST Service Contract sales, measure Warranty. Renewals, New Business</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warranty Conversion</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>