Perkin-UAT/force-app/main/default/objects/ServiceContract/listViews/ARQ_000739_ServiceContract.listView-meta.xml
<ListView>
    <fullName>ARQ_000739_ServiceContract</fullName>
    <filterScope>Queue</filterScope>
    <label>SupportGroup</label>
    <queue>ARQ_000670</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>