Perkin-UAT/force-app/main/default/objects/ServiceContract/listViews/GX_GXII_software_updates_needed_SIMI.listView-meta.xml
<ListView>
    <fullName>GX_GXII_software_updates_needed_SIMI</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>0,1,2</value>
    </filters>
    <label>GX/GXII - software updates needed - SIMI</label>
</ListView>