Perkin-UAT/force-app/main/default/objects/ServiceContract/listViews/INV_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>INV_Service_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>Contract_Stage__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.STATUSINDICATOR</columns>
    <columns>OWNER.NAME</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.NAME</field>
        <operation>contains</operation>
        <value>O&#39;coin</value>
    </filters>
    <label>INV Service Contracts</label>
    <language>en_US</language>
</ListView>