Perkin-UAT/force-app/main/default/objects/ServiceContract/listViews/MFT_and_CLH_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>MFT_and_CLH_Service_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>Contract_Stage__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>OWNER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.NAME</field>
        <operation>contains</operation>
        <value>Mantia</value>
    </filters>
    <label>MFT and CLH Service Contracts</label>
</ListView>