Perkin-UAT/force-app/main/default/objects/ServiceContract/listViews/Other_CALP_Service_Contracts.listView-meta.xml
<ListView>
    <fullName>Other_CALP_Service_Contracts</fullName>
    <columns>CONTRACT.NAME</columns>
    <columns>Contract_Stage__c</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>UPDATEDBY_USER.NAME</columns>
    <columns>OWNER.NAME</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.NAME</field>
        <operation>notContain</operation>
        <value>O&#39;coin</value>
    </filters>
    <filters>
        <field>OWNER.NAME</field>
        <operation>notContain</operation>
        <value>Cirillo</value>
    </filters>
    <label>Other CALP Service Contracts</label>
</ListView>